# berryshare-backend

./: .env.example  .gitignore  Cargo.toml  diesel.toml
api/: berryshare.graphql
migrations/2025-03-16-015429_create_users/: up.sql
migrations/2025-03-16-125815_create_shares/: up.sql
src/: context.rs  data.rs  db.rs  endpoints.rs  graphql.rs  lib.rs  main.rs  models.rs  query_manager.rs  schema.rs
