[package]
name = "berryshare-backend"
version = "0.1.0"
authors = ["leottaro <leo.hafdane@gmail.com>"]
edition = "2024"

[dependencies]
actix-rt = "2.10.0"
actix-web = "4.10.2"
diesel = { version = "2.2.8", features = ["mysql", "r2d2"] }
dotenv = "0.15.0"
env_logger = "0.11.7"
juniper = "0.16.1"
r2d2 = "0.8.10"
serde_json = "1.0.140"
