[package]
name = "berryshare-backend"
version = "0.1.0"
authors = ["leottaro <leo.hafdane@gmail.com>"]
edition = "2024"

[dependencies]
actix-web = "4.10.2"
actix-cors = "0.7.1"

diesel = { version = "2.2.8", features = ["mysql", "r2d2"] }
juniper = "0.16.1"

dotenv = "0.15.0"
env_logger = "0.11.7"
log = "0.4.26"
